--- a/service.css
+++ b/service.css
@@ -181,7 +181,7 @@
             font-weight: 700;
             line-height: 1.2;
             margin-bottom: 1.5rem;
-            color: var(--dark);
+            color: var(--light-gray);
         }
 
         .hero h1 span {
@@ -189,10 +189,10 @@
         }
 
         .hero p {
-             font-size: 18px;
+            font-size: 20px;
             font-weight: 600;
             margin-bottom: 2rem;
-            color: var(--light);
+            color: #000;
             max-width: 500px;
             line-height: 2;
         }
