--- a/style.css
+++ b/style.css
@@ -177,10 +177,11 @@
         }
 
         .hero h1 {
-            font-size: 3.2rem;
+            font-size: 2.5rem;
             font-weight: 700;
             line-height: 1.2;
             margin-bottom: 1.5rem;
+            margin-top: 50px;
             color: var(--light-gray);
         }
 
